--- a/backend/config.env
+++ b/backend/config.env
@@ -2,4 +2,4 @@ PORT = 4000
 FRONTEND_URL = http://localhost:5173
 MONGO_URI = mongodb://127.0.0.1:27017
 PAYMENT_API_KEY = 
-MERCHENT_ID = 
+MERCHANT_ID = 
